Manufactoring/force-app/main/default/objects/mfg_Log__c/fields/mfg_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>mfg_Error_Message__c</fullName>
    <label>Error Message</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>