Manufactoring/force-app/main/default/objects/mfg_Log__c/fields/mfg_Logged_By_Automation__c.field-meta.xml
<CustomField>
    <fullName>mfg_Logged_By_Automation__c</fullName>
    <label>Logged By (Automation)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>Trigger</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>