Manufactoring/force-app/main/default/objects/mfg_Log__c/fields/mfg_Occurred_At__c.field-meta.xml
<CustomField>
    <fullName>mfg_Occurred_At__c</fullName>
    <label>Occurred At</label>
    <type>DateTime</type>
</CustomField>