Manufactoring/force-app/main/default/objects/mfg_Log__c/fields/mfg_Source_Component__c.field-meta.xml
<CustomField>
    <fullName>mfg_Source_Component__c</fullName>
    <inlineHelpText>Identifies where the error occurred (Apex class, Flow, or LWC)</inlineHelpText>
    <label>Class / Flow / Component Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>